input string positions + tree in output, new tests, fixes

--- a/rule/common.yaml
+++ b/rule/common.yaml
@@ -153,7 +153,7 @@ common3:
           [\pL@]
       - +url:
         - >-
-          (?:[a-z]{2,}://)(?:\w+(?::\w+)?@)?(?:[a-z_-]+[.])+[a-z]{2,}(?::\d+)?(?:/(?:\S*))?
+          (?:[a-z]{2,}://)(?:\w+(?::\w+)?@)?(?:[a-zA-Z_-]+[.])+[a-z]{2,}(?::\d+)?(?:/(?:\S*))?
         - >-
           (?:\S+:\S*@)?(?:[a-zA-Z][a-z_-]+[.])+[a-z]{1,}(?:/(?:\S*))?
       - ?<!: >-
@@ -194,7 +194,7 @@ common3:
     parts:
       - \left
       - ?<!: >-
-          [\pL\pS\d/(]
+          [\pL\pS\d/(‐-]
       - +ronum: >-
           (?=[IVXLCDM]{2,})M{0,4}(?:CM|CD|D?C{0,3}D?)(?:XC|XL|L?X{0,3}L?)(?:IX|IV|V?I{0,3}V?)
       - ?!: >-
@@ -274,13 +274,14 @@ common3:
         - _?
       - \right
 
-
   - name: time
     parts:
       - \left
       - ?<!: '[\pL\d]'
-      - +time: (?:[01]\d|2[0-4])\d?[.:][0-5]\dh?(?:[:][0-5]\d)?
-      - ?!: '[\pL\d,.]'
+      - +time: (?:[01]?\d|2[0-4])\d?[.:][0-5]\dh?(?:[:][0-5]\d)?
+      - +time: ([ap]m|[ap][.]m[.])?
+      - ?!: '[\pL\d]'
+      - ?!: '[,.]\d'
       - _?
       - \right
 
@@ -291,9 +292,9 @@ common3:
           [\pL\d’'.,-]
       - +numrt: \d+(?:[.,]\d+)?(?:[’'.,\s]\d{3,})*?[:]\d+(?:[.,]\d+)?(?:[’'.,\s]\d{3,})*?
       - ?!: >-
-          [\pL\d’'.-]
+          [\pL\d’'-]
       - ?!: >-
-          [,]\S
+          [,.]\S
       - _?
       - \right
 
@@ -335,6 +336,14 @@ common3:
       - _?
       - \right
 
+  - name: alternatives
+    parts:
+      - \left
+      - ?<=: \pL[\pL‐-]
+      - +alt: /
+      - ?=: \pL
+      - \right
+
 
 common5:
   - name: number
@@ -343,7 +352,7 @@ common5:
       - ?<!: >-
           [\pL\d’'.,-]
       - +number: >-
-          [+]?\d+(?:[.,]\d+)?(?:[’'.,\s]\d{3,})*(?:[.,]\d+)?\p{No}?(?:-(?=\s))?
+          [+±]?\d+(?:[.,]\d+)?(?:[’'.,\s]\d{3,})*(?:[.,]\d+)?\p{No}?(?:-(?=\s))?
       - ?!: >-
           [\pL\d’'.-]
       - _?
@@ -353,7 +362,7 @@ common5:
     parts:
       - \left
       - ?<!: >-
-          [\pL\d]
+          [\pL\d-]
       - +abbr: >-
           (?:\p{Lu}[.]\pZ*)+
       - ?!: >-
@@ -366,8 +375,9 @@ common5:
       - \left
       - +dot: '[.!?]'
       - +EOS3
+      - ?!: '[\p{Lu}\d]'
       - _?
-      - ?=: '[\p{Lu}\d„“«]'
+      - ?=: '[\p{Lu}\d„“«»"]'
       - \right
 
   - name: hashtag
@@ -419,7 +429,6 @@ common6:
       - +dot: '[.]'
       - +EOS4
       - _
-      - ?=: '\p{Lu}'
       - \right
 
 
@@ -454,7 +463,8 @@ common8:
   - name: quotation left; remaining quotation marks (including wrong ones)
     parts:
       - \left
-      - ?<!: '[\pL\d]'
+      - ?<!: >-
+          [\pL\d]
       - +quotA: >-
           [\p{Pi}'’"„−–—]
       - _?
