--- a/test/de.quotation.yaml
+++ b/test/de.quotation.yaml
@@ -36,3 +36,8 @@ test:
   - unit: >-
       Jonas hat schon früher einen Instagram-Kanal des Duos abonniert und ist den beiden in ihre neue [«Zwei am Morge»-Show] gefolgt|. Sein Fazit|: «|Schon noch witzig|.|»
 
+  - unit: >-
+      Es hänge von vielen Faktoren ab|, wie sich der Wald nach einem Brand entwickele - "|wie stark hat das Feuer gewütet und wie sind die örtlichen Bedingungen|"|, sagte Ibisch|. "|Der Boden nach einem Brand ist in der Regel nährstoffreich|. Das ist gut für das Pflanzenwachstum|.|" Im Totholz werde Wasser gespeichert|, und es schütze den Boden|.
+
+  - unit: >-
+      "|Die deutschen Konservativen und ihre Führungsriege sind unfähig|, sich von rechts wirklich bedroht zu fühlen|. Für sie steht der eigentliche Feind immer noch links|. Rechts - das sind irgendwie ungezogene Verwandte|.|" So Ralph Giordano 1992 im SPIEGEL|, es ist ein ewiger Satz|, auch wenn er eindeutig nur noch für Teile der Konservativen gilt|.
