--- a/test/en.quotation.yaml
+++ b/test/en.quotation.yaml
@@ -56,3 +56,6 @@ test:
       [“]we represented too small a minority of the population[”].
       They could still get away with saying things like that then[.]’
 
+  - unit: >-
+      Saxe begins her TED lecture with the question|: ‘|How is it so easy to know other minds|?|’
+
