--- a/test/fr.elision.yaml
+++ b/test/fr.elision.yaml
@@ -6,7 +6,7 @@
 #
 
 ---
-name: elision / contraction & lexicalized items in French
+name: Elision/contraction & lexicalized items in French
 
 abbr:
   - abbr/fr.list
